# NLPchatbot

./: main.py  pyproject.toml  readme.md
model/: intent_pair.csv  model.py  queries.py
