[tool.poetry]
name = "openfabric-test"
version = "1.1"
description = "cognitive-assistant"
authors = ["Andrei"]

[tool.poetry.dependencies]
python = "^3.9"
openfabric-pysdk = "0.1.11"
torch = "1.13.0"
flask = "2.1.3"
werkzeug = "2.0.3"
torchtext = "0.14.0"
pandas = "1.5.2"
beautifulsoup4 = "4.11.1"
scikit-learn = "1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
